--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+# .gitmodules
+# Author: git
+# Submodules
+
 [submodule "lib/argparse"]
 	path = lib/argparse
 	url = https://github.com/p-ranav/argparse.git
